--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "test": "node test-mcp.mjs",
     "clean": "rmdir /s /q dist 2>nul || rm -rf dist"
   },
-  "keywords": ["mcp", "roblox-ts", "typescript", "model-context-protocol"],
+  "keywords": [
+    "mcp",
+    "roblox-ts",
+    "typescript",
+    "model-context-protocol"
+  ],
   "author": "",
   "license": "MIT",
   "type": "commonjs",
@@ -20,6 +25,9 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.1",
+    "@types/cheerio": "^0.22.35",
+    "axios": "^1.11.0",
+    "cheerio": "^1.1.2",
     "zod": "^3.25.76"
   }
 }
