--- a/package.json
+++ b/package.json
@@ -3,22 +3,43 @@
   "version": "1.0.0",
   "description": "MCP server for Roblox-ts development with best practices and library enforcement",
   "main": "dist/server.js",
+  "bin": {
+    "roblox-ts-mcp": "./bin/roblox-ts-mcp.js"
+  },
+  "files": [
+    "dist/",
+    "bin/",
+    "README.md",
+    "USAGE.md"
+  ],
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "tsc && node dist/server.js",
     "test": "node test-mcp.mjs",
-    "clean": "rmdir /s /q dist 2>nul || rm -rf dist"
+    "clean": "rmdir /s /q dist 2>nul || rm -rf dist",
+    "prepublishOnly": "npm run build"
   },
   "keywords": [
     "mcp",
     "roblox-ts",
     "typescript",
-    "model-context-protocol"
+    "model-context-protocol",
+    "roblox",
+    "game-development",
+    "documentation",
+    "code-generation"
   ],
   "author": "",
   "license": "MIT",
   "type": "commonjs",
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-username/roblox-ts-mcp.git"
+  },
   "devDependencies": {
     "@types/node": "^24.2.0",
     "typescript": "^5.9.2"
