--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "roblox-ts-mcp",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "MCP server for Roblox-ts development with best practices and library enforcement",
   "main": "dist/server.js",
   "bin": {
@@ -47,8 +47,10 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.1",
     "@types/cheerio": "^0.22.35",
+    "@types/js-yaml": "^4.0.9",
     "axios": "^1.11.0",
     "cheerio": "^1.1.2",
+    "js-yaml": "^4.1.0",
     "zod": "^3.25.76"
   }
 }
