--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/js-yaml": "^4.0.9",
     "axios": "^1.11.0",
     "cheerio": "^1.1.2",
+    "dotenv": "^17.2.1",
     "js-yaml": "^4.1.0",
     "zod": "^3.25.76"
   }
